2018-01-09

        * Version 1.5.0 released
        =========================

        Add GPha::counts_spectrum() and GPha::backscal_spectrum() methods (#2290)
        Add GNdarray sign(), operator*= and operator/= (#2290)
        Add GSkyMap::counts() and GSkyMap::flux() methods and clip() friend operator (#2290)
        Add GSkyMap::array() method to Python interface (#2285)
        CTA observations handle "statistic" attribute in XML file (#2238)
        Use CSTAT and CHI2 instead of POISSON and GAUSSIAN for statistic (#2237)
        Changed GObservation::statistics() to statistic() (#2238)
        Prevent negative response values for COMPTEL IRF (#2234)
        Add GCTAOnOffObservation PHA, ARF and RMF constructor (#2231)
        Implement observation stacking in GCTAOnOffObservation (#2228)
        Implement region integration in GCTAOnOffObservation (#2210)
        Implement WSTAT in GCTAOnOffObservation (#2209)
        Add GPha arithmetic operators and scale access methods
        Add GArf arithmetic operators
        Add GRmf arithmetic operators
        Add GEbounds equality and inequality operators
        Improve efficiency of GGti::contains() method.
        Add GFitsTableCol::scale() method (#2191)
        Implement code generator for GammaLib extensions (#2190)
        Implement COMPTEL event list support (#2187)
        Implement COMPTEL response computation (#2186)
        Add COMPTEL SDA, SDB and ICT response files (#2186)
        Correct output of COMPTEL DRB fitting XML model (#2184)
        Allow source position fitting for Fermi-LAT data (#2183)
        Add GModelSpectralNodes spectral model constructor (#2178)
        Add GSkyMap division operator for Python 3.x (#2122)
        Add time parameter to GApplicationPar class (#1864)
        Add time string constructor and set method to GTime class (#1864)
        Use GNdarray to store GSkyMap pixels and add smooth() method (#1729)
        Add GSkyRegionMap class (#1121)


2017-10-31
